Digital diary base